force-app/main/default/objects/ProcessLastSyncTime__c/ProcessLastSyncTime__c.object-meta.xml
<CustomObject>
    <label>Process Last Sync Time</label>
    <nameField>
        <label>Process Last Sync Time Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Processes Last Sync Time</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>