force-app/main/default/objects/ProcessLastSyncTime__c/fields/CurrentProcessId__c.field-meta.xml
<CustomField>
    <fullName>CurrentProcessId__c</fullName>
    <label>Current Process Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>