force-app/main/default/objects/ProcessLastSyncTime__c/fields/ProcessName__c.field-meta.xml
<CustomField>
    <fullName>ProcessName__c</fullName>
    <label>Process Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>