force-app/main/default/objects/ProcessLastSyncTime__c/fields/SyncId__c.field-meta.xml
<CustomField>
    <fullName>SyncId__c</fullName>
    <label>Sync Id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>