force-app/main/default/objects/ProcessLastSyncTime__c/fields/SyncTime__c.field-meta.xml
<CustomField>
    <fullName>SyncTime__c</fullName>
    <label>Sync Time</label>
    <type>DateTime</type>
</CustomField>